@@ -1,5 +1,22 @@
 package dev.ikm.komet.kview.controls;
 
+import dev.ikm.komet.framework.temp.FxGet;
+import dev.ikm.komet.framework.view.ObservableView;
+import dev.ikm.komet.framework.view.ObservableViewNoOverride;
+import dev.ikm.komet.framework.view.ObservableViewWithOverride;
+import dev.ikm.tinkar.coordinate.Coordinates;
+import dev.ikm.tinkar.coordinate.stamp.StateSet;
+import dev.ikm.tinkar.entity.StampService;
+import dev.ikm.tinkar.terms.ConceptFacade;
+import dev.ikm.tinkar.terms.EntityFacade;
+import dev.ikm.tinkar.terms.EntityProxy;
+import dev.ikm.tinkar.terms.PatternFacade;
+import dev.ikm.tinkar.terms.State;
+import dev.ikm.tinkar.terms.TinkarTerm;
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
+import org.eclipse.collections.api.set.ImmutableSet;
+
 import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
@@ -9,6 +26,8 @@ import java.util.Objects;
 import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static dev.ikm.tinkar.common.service.PrimitiveData.PREMUNDANE_TIME;
 
 public class FilterOptions implements Serializable {
 
@@ -52,34 +71,10 @@ public class FilterOptions implements Serializable {
         }
     }
 
-    public static final class Option implements Serializable {
+    public static final class Option<T> implements Serializable {
+
         @Serial
         private static final long serialVersionUID = 0L;
-
-        private final OPTION_ITEM item;
-        private final String title;
-        private final List<String> defaultOptions;
-        private final List<String> availableOptions;
-        private final List<String> selectedOptions;
-        private final List<String> excludedOptions;
-        private final boolean multiSelect;
-        private boolean any;
-        private final EnumSet<BUTTON> buttonType;
-        private boolean inOverride;
-
-        public Option(OPTION_ITEM item, String title, List<String> defaultOptions, List<String> availableOptions,
-                      List<String> selectedOptions, List<String> excludedOptions, boolean multiSelect, boolean any, EnumSet<BUTTON> buttonType, boolean inOverride) {
-            this.item = item;
-            this.title = title;
-            this.defaultOptions = defaultOptions;
-            this.availableOptions = availableOptions;
-            this.selectedOptions = selectedOptions;
-            this.excludedOptions = excludedOptions;
-            this.multiSelect = multiSelect;
-            this.any = any;
-            this.buttonType = buttonType;
-            this.inOverride = inOverride;
-        }
 
         public enum BUTTON {
             NONE(""),
@@ -98,19 +93,32 @@ public class FilterOptions implements Serializable {
             }
         }
 
+        private final OPTION_ITEM item;
+        private final String title;
+        private final List<T> availableOptions;
+        private final ObservableList<T> selectedOptions;
+        private final ObservableList<T> excludedOptions;
+        private final boolean multiSelect;
+        private boolean any;
+        private final EnumSet<BUTTON> buttonType;
+        private boolean inOverride;
+
+        public Option(OPTION_ITEM item, String title,
+                      List<T> availableOptions, ObservableList<T> selectedOptions, ObservableList<T> excludedOptions,
+                      boolean multiSelect, boolean any, EnumSet<BUTTON> buttonType, boolean inOverride) {
+            this.item = item;
+            this.title = title;
+            this.availableOptions = availableOptions;
+            this.selectedOptions = selectedOptions;
+            this.excludedOptions = excludedOptions;
+            this.multiSelect = multiSelect;
+            this.any = any;
+            this.buttonType = buttonType;
+            this.inOverride = inOverride;
+        }
+
         public String title() {
             return resources.getString(title);
-        }
-
-        public List<String> defaultOptions() {
-            return defaultOptions;
-        }
-
-        @Override
-        public String toString() {
-            return "> " + item + ": " + (any ? "Any of: " : (multiSelect ? "All of: " : "")) + selectedOptions +
-                    (excludedOptions == null || excludedOptions.isEmpty() ? "" : " - " + excludedOptions) +
-                    " from av: " + availableOptions + " def: " + defaultOptions + (inOverride ? " *OV*" : "");
         }
 
         public boolean isMultiSelectionAllowed() {
@@ -145,11 +153,47 @@ public class FilterOptions implements Serializable {
             this.inOverride = override;
         }
 
+        public OPTION_ITEM item() {
+            return item;
+        }
+
+        public List<T> availableOptions() {
+            return availableOptions;
+        }
+
+        public ObservableList<T> selectedOptions() {
+            return selectedOptions;
+        }
+
+        public ObservableList<T> excludedOptions() {
+            return excludedOptions;
+        }
+
+        public boolean any() {
+            return any;
+        }
+
+        public void setAny(boolean any) {
+            this.any = any;
+        }
+
+        public EnumSet<BUTTON> buttonType() {
+            return buttonType;
+        }
+
+        public Option<T> copy() {
+            return new Option<>(item, title,
+                    new ArrayList<>(availableOptions.stream().toList()),
+                    FXCollections.observableArrayList(selectedOptions.stream().toList()),
+                    excludedOptions != null ? FXCollections.observableArrayList(excludedOptions.stream().toList()) : null,
+                    multiSelect, any, buttonType, inOverride);
+        }
+
         @Override
         public boolean equals(Object o) {
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
-            Option option = (Option) o;
+            Option<?> option = (Option<?>) o;
             if (!Objects.equals(item, option.item)) return false;
             if (!Objects.equals(title, option.title)) return false;
             if (any != option.any) return false;
@@ -169,46 +213,13 @@ public class FilterOptions implements Serializable {
             return Objects.hash(item, title, any, selectedOptions, excludedOptions, inOverride);
         }
 
-        public Option copy() {
-            return new Option(item, title,
-                    new ArrayList<>(defaultOptions.stream().toList()),
-                    new ArrayList<>(availableOptions.stream().toList()),
-                    new ArrayList<>(selectedOptions.stream().toList()),
-                    excludedOptions != null ? new ArrayList<>(excludedOptions.stream().toList()) : null,
-                    multiSelect, any, buttonType, inOverride);
+        @Override
+        public String toString() {
+            return "> " + item + ": " + (any ? "Any of: " : (multiSelect ? "All of: " : "")) + selectedOptions.stream().map(s -> s instanceof EntityFacade ef ? ef.description() : s).toList() +
+                    (excludedOptions == null || excludedOptions.isEmpty() ? "" : " - " + excludedOptions.stream().map(s -> s instanceof EntityFacade ef ? ef.description() : s).toList()) +
+                    " from av: " + availableOptions.stream().map(s -> s instanceof EntityFacade ef ? ef.description() : s).toList() + (inOverride ? " *OV*" : "");
         }
 
-        public OPTION_ITEM item() {
-            return item;
-        }
-
-        public List<String> availableOptions() {
-            return availableOptions;
-        }
-
-        public List<String> selectedOptions() {
-            return selectedOptions;
-        }
-
-        public List<String> excludedOptions() {
-            return excludedOptions;
-        }
-
-        public boolean multiSelect() {
-            return multiSelect;
-        }
-
-        public boolean any() {
-            return any;
-        }
-
-        public void setAny(boolean any) {
-            this.any = any;
-        }
-
-        public EnumSet<BUTTON> buttonType() {
-            return buttonType;
-        }
     }
 
     private final EnumSet<Option.BUTTON> noneSet = EnumSet.of(Option.BUTTON.NONE);
@@ -216,55 +227,62 @@ public class FilterOptions implements Serializable {
     private final EnumSet<Option.BUTTON> allExcludingSet = EnumSet.of(Option.BUTTON.ALL, Option.BUTTON.EXCLUDING);
     private final EnumSet<Option.BUTTON> allAnyExcludingSet = EnumSet.of(Option.BUTTON.ALL, Option.BUTTON.ANY, Option.BUTTON.EXCLUDING);
 
-    public interface Coordinates {}
+    public interface FilterCoordinates {}
 
-    public class MainCoordinates implements Coordinates {
+    public class MainFilterCoordinates implements FilterCoordinates {
 
         // MainCoordinates
 
-        private Option navigator;
+        private Option<PatternFacade> navigator;
 
         {
-            List<String> navigatorOptions = Stream.of(
-                            "navigator.option.stated", "navigator.option.inferred")
-                    .map(resources::getString)
-                    .toList();
-            navigator = new Option(OPTION_ITEM.NAVIGATOR, "navigator.title", new ArrayList<>(List.of(navigatorOptions.getFirst())),
-                    new ArrayList<>(navigatorOptions), new ArrayList<>(List.of(navigatorOptions.getFirst())), null, false, false, noneSet, false);
+            List<PatternFacade> navigatorOptions = FxGet.navigationOptions().stream().map(l -> l.get(0)).toList();
+            navigator = new Option<>(OPTION_ITEM.NAVIGATOR, "navigator.title",
+                    new ArrayList<>(navigatorOptions), FXCollections.observableArrayList(navigatorOptions.getFirst()), null, false, false, noneSet, false);
         }
 
-        private Option type;
+        private Option<String> type;
         {
             List<String> typeOptions = Stream.of(
                             "type.option.concepts", "type.option.semantics")
                     .map(resources::getString)
                     .toList();
-            type = new Option(OPTION_ITEM.TYPE, "type.title", new ArrayList<>(typeOptions),
-                    new ArrayList<>(typeOptions), new ArrayList<>(typeOptions), null, true, false, allSet, false);
+            type = new Option<>(OPTION_ITEM.TYPE, "type.title",
+                    new ArrayList<>(typeOptions), FXCollections.observableArrayList(typeOptions), null, true, false, allSet, false);
         }
 
-        private Option header = new Option(OPTION_ITEM.HEADER, "header.title", new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), null, false, false, allSet, false);
+        private Option<String> header = new Option<>(OPTION_ITEM.HEADER, "header.title",
+                new ArrayList<>(), FXCollections.observableArrayList(), null, false, false, allSet, false);
 
-        private Option status = new Option(OPTION_ITEM.STATUS, "status.title", new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), null, true, false, allSet, false);
-
-        private Option time;
+        private Option<State> status;
         {
-            List<String> dateOptions = Stream.of("time.item1", "time.item2", "time.item3")
+            List<State> ALL_STATES = StateSet.ACTIVE_INACTIVE_AND_WITHDRAWN.toEnumSet().stream().toList();
+
+            status = new Option<>(OPTION_ITEM.STATUS, "status.title",
+                    new ArrayList<>(ALL_STATES), FXCollections.observableArrayList(ALL_STATES), null, true, false, allSet, false);
+        }
+
+        private Option<String> time;
+        {
+            List<String> dateOptions = Stream.of("time.item1", "time.item2", "time.item3") // , "time.item4" Range not supported yet
                     .map(resources::getString)
                     .toList();
-            time = new Option(OPTION_ITEM.TIME, "time.title", new ArrayList<>(List.of(dateOptions.getFirst())),
-                    new ArrayList<>(dateOptions), new ArrayList<>(List.of(dateOptions.getFirst())), new ArrayList<>(), false, false, noneSet, false);
+            time = new Option<>(OPTION_ITEM.TIME, "time.title",
+                    new ArrayList<>(dateOptions), FXCollections.observableArrayList(dateOptions.getFirst()), FXCollections.observableArrayList(), false, false, noneSet, false);
         }
 
-        private Option module = new Option(OPTION_ITEM.MODULE, "module.title", new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), true, false, allAnyExcludingSet, false);
+        private Option<ConceptFacade> module;
 
-        private Option path = new Option(OPTION_ITEM.PATH, "path.title", new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), null, false, false, noneSet, false);
+        {
+            List<ConceptFacade> modules = StampService.get().getModulesInUse().stream().toList();
+            module = new Option<>(OPTION_ITEM.MODULE, "module.title",
+                    new ArrayList<>(modules), FXCollections.observableArrayList(), FXCollections.observableArrayList(), true, false, allAnyExcludingSet, false);
+        }
 
-        private Option kindOf;
+        private Option<ConceptFacade> path = new Option<>(OPTION_ITEM.PATH, "path.title",
+                new ArrayList<>(), FXCollections.observableArrayList(), null, false, false, noneSet, false);
+
+        private Option<String> kindOf;
         {
             List<String> kindOfOptions = Stream.of(
                             "kindof.option.item1", "kindof.option.item2", "kindof.option.item3", "kindof.option.item4",
@@ -272,76 +290,76 @@ public class FilterOptions implements Serializable {
                             "kindof.option.item9", "kindof.option.item10", "kindof.option.item11")
                     .map(resources::getString)
                     .toList();
-            kindOf = new Option(OPTION_ITEM.KIND_OF, "kindof.title", new ArrayList<>(kindOfOptions),
-                    new ArrayList<>(kindOfOptions), new ArrayList<>(kindOfOptions), new ArrayList<>(), true, false, allExcludingSet, false);
+            kindOf = new Option<>(OPTION_ITEM.KIND_OF, "kindof.title",
+                    new ArrayList<>(kindOfOptions), FXCollections.observableArrayList(kindOfOptions), FXCollections.observableArrayList(), true, false, allExcludingSet, false);
         }
 
-        private Option membership;
+        private Option<String> membership;
         {
             List<String> membershipOptions = Stream.of(
                             "membership.option.member1", "membership.option.member2", "membership.option.member3",
                             "membership.option.member4", "membership.option.member5")
                     .map(resources::getString)
                     .toList();
-            membership = new Option(OPTION_ITEM.MEMBERSHIP, "membership.title", new ArrayList<>(membershipOptions),
-                    new ArrayList<>(membershipOptions), new ArrayList<>(membershipOptions), null, true, false, allSet, false);
+            membership = new Option<>(OPTION_ITEM.MEMBERSHIP, "membership.title",
+                    new ArrayList<>(membershipOptions), FXCollections.observableArrayList(membershipOptions), null, true, false, allSet, false);
         }
 
-        private Option sortBy;
+        private Option<String> sortBy;
         {
             List<String> sortByOptions = Stream.of(
                             "sortby.option.relevant", "sortby.option.alphabetical", "sortby.option.groupedby")
                     .map(resources::getString)
                     .toList();
-            sortBy = new Option(OPTION_ITEM.SORT_BY, "sortby.title", new ArrayList<>(List.of(sortByOptions.getFirst())),
-                    new ArrayList<>(sortByOptions), new ArrayList<>(List.of(sortByOptions.getFirst())), null, false, false, allSet, false);
+            sortBy = new Option<>(OPTION_ITEM.SORT_BY, "sortby.title",
+                    new ArrayList<>(sortByOptions), FXCollections.observableArrayList(List.of(sortByOptions.getFirst())), null, false, false, allSet, false);
         }
 
         private final List<Option> options;
 
-        MainCoordinates() {
+        MainFilterCoordinates() {
             options = new ArrayList<>(List.of(
                     navigator, type, header, status, time, module, path, kindOf, membership, sortBy
             ));
         }
 
-        public Option getNavigator() {
+        public Option<PatternFacade> getNavigator() {
             return navigator;
         }
 
-        public Option getType() {
+        public Option<String> getType() {
             return type;
         }
 
-        public Option getHeader() {
+        public Option<String> getHeader() {
             return header;
         }
 
-        public Option getStatus() {
+        public Option<State> getStatus() {
             return status;
         }
 
-        public Option getTime() {
+        public Option<String> getTime() {
             return time;
         }
 
-        public Option getModule() {
+        public Option<ConceptFacade> getModule() {
             return module;
         }
 
-        public Option getPath() {
+        public Option<ConceptFacade> getPath() {
             return path;
         }
 
-        public Option getKindOf() {
+        public Option<String> getKindOf() {
             return kindOf;
         }
 
-        public Option getMembership() {
+        public Option<String> getMembership() {
             return membership;
         }
 
-        public Option getSortBy() {
+        public Option<String> getSortBy() {
             return sortBy;
         }
 
@@ -349,11 +367,32 @@ public class FilterOptions implements Serializable {
             return options;
         }
 
+        public MainFilterCoordinates copy() {
+            MainFilterCoordinates copy = new MainFilterCoordinates();
+            copy.navigator = navigator.copy();
+            copy.type = type.copy();
+            copy.header = header.copy();
+            copy.status = status.copy();
+            copy.time = time.copy();
+            copy.module = module.copy();
+            copy.path = path.copy();
+            copy.kindOf = kindOf.copy();
+            copy.membership = membership.copy();
+            copy.sortBy = sortBy.copy();
+            copy.options.clear();
+            copy.options.addAll(List.of(copy.navigator, copy.type,
+                    copy.header, copy.status,
+                    copy.time, copy.module,
+                    copy.path, copy.kindOf,
+                    copy.membership, copy.sortBy));
+            return copy;
+        }
+
         @Override
         public boolean equals(Object o) {
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
-            MainCoordinates that = (MainCoordinates) o;
+            MainFilterCoordinates that = (MainFilterCoordinates) o;
             return Objects.equals(navigator, that.navigator) &&
                     Objects.equals(type, that.type) &&
                     Objects.equals(header, that.header) &&
@@ -384,75 +423,64 @@ public class FilterOptions implements Serializable {
         }
     }
 
-    public class LanguageCoordinates implements Coordinates, Comparable {
+    public class LanguageFilterCoordinates implements FilterCoordinates, Comparable {
 
         // Language Coordinates
-        private Option language = new Option(OPTION_ITEM.LANGUAGE, "language.option.title", new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), false, false, noneSet, false);
-
-        private Option dialect;
+        private Option<EntityFacade> language;
         {
-            List<String> dialectOptions = Stream.of(
-                            "dialect.option.item1", "dialect.option.item2",
-                            "dialect.option.item3", "dialect.option.item4", "dialect.option.item5")
-                    .map(resources::getString)
-                    .toList();
-            dialect = new Option(OPTION_ITEM.DIALECT, "dialect.option.title", new ArrayList<>(dialectOptions),
-                    new ArrayList<>(dialectOptions), new ArrayList<>(dialectOptions), null, true, false, noneSet, false);
+            List<EntityFacade> languageOptions = FxGet.allowedLanguages().stream().map(lang -> (EntityFacade) lang).toList();
+            language = new Option<>(OPTION_ITEM.LANGUAGE, "language.option.title",
+                    new ArrayList<>(languageOptions), FXCollections.observableArrayList(List.of(languageOptions.getFirst())), FXCollections.observableArrayList(), false, false, noneSet, false);
         }
 
-        private Option pattern;
+        private Option<EntityFacade> dialect;
         {
-            List<String> patternOptions = Stream.of(
-                            "pattern.option.item1", "pattern.option.item2",
-                            "pattern.option.item3", "pattern.option.item4")
-                    .map(resources::getString)
-                    .toList();
-            pattern = new Option(OPTION_ITEM.PATTERN, "pattern.option.title", new ArrayList<>(List.of(patternOptions.getFirst())),
-                    new ArrayList<>(patternOptions), new ArrayList<>(List.of(patternOptions.getFirst())), null, false, false, noneSet, false);
+            List<EntityProxy> dialectPattern = List.of(TinkarTerm.US_DIALECT_PATTERN, TinkarTerm.GB_DIALECT_PATTERN);
+            dialect = new Option<>(OPTION_ITEM.DIALECT, "dialect.option.title",
+                    new ArrayList<>(dialectPattern), FXCollections.observableArrayList(dialectPattern), null, true, false, noneSet, false);
         }
 
-        private Option descriptionType;
+        private Option<EntityFacade> pattern;
         {
-            List<String> descriptionTypeOptions = Stream.of(
-                            //FIXME, the parent/classic menu uses FxGET::allowedDescriptionTypeOrder and hard codes FQN
-                            // and Regular Name as options... as new designs for Language+Dialect get implemented
-                            // we will additionally need to address this setting as well
-                            "description.option.fqn", "description.option.preferred", "description.option.regular",
-                            "description.option.preferredfqn", "description.option.regularfqn")
-                    .map(resources::getString)
-                    .toList();
-            descriptionType = new Option(OPTION_ITEM.DESCRIPTION_TYPE, "description.option.title", new ArrayList<>(descriptionTypeOptions),
-                    new ArrayList<>(descriptionTypeOptions), new ArrayList<>(descriptionTypeOptions), null, true, false, noneSet, false);
+            EntityFacade patternOption = TinkarTerm.DESCRIPTION_PATTERN;
+            pattern = new Option<>(OPTION_ITEM.PATTERN, "pattern.option.title",
+                    new ArrayList<>(List.of(patternOption)), FXCollections.observableArrayList(List.of(patternOption)), null, false, false, noneSet, false);
         }
 
-        private final List<Option> options;
+        private Option<EntityFacade> descriptionType;
+        {
+            List<EntityFacade> descriptionTypeOptions = List.of(TinkarTerm.REGULAR_NAME_DESCRIPTION_TYPE, TinkarTerm.FULLY_QUALIFIED_NAME_DESCRIPTION_TYPE);
+            descriptionType = new Option<>(OPTION_ITEM.DESCRIPTION_TYPE, "description.option.title",
+                    new ArrayList<>(descriptionTypeOptions), FXCollections.observableArrayList(descriptionTypeOptions), null, true, false, noneSet, false);
+        }
+
+        private final List<Option<EntityFacade>> options;
         private final int ordinal;
 
-        LanguageCoordinates(int ordinal) {
+        LanguageFilterCoordinates(int ordinal) {
             this.ordinal = ordinal;
             options = new ArrayList<>(List.of(
                     language, dialect, pattern, descriptionType
             ));
         }
 
-        public Option getLanguage() {
+        public Option<EntityFacade> getLanguage() {
             return language;
         }
 
-        public Option getDialect() {
+        public Option<EntityFacade> getDialect() {
             return dialect;
         }
 
-        public Option getPattern() {
+        public Option<EntityFacade> getPattern() {
             return pattern;
         }
 
-        public Option getDescriptionType() {
+        public Option<EntityFacade> getDescriptionType() {
             return descriptionType;
         }
 
-        public List<Option> getOptions() {
+        public List<Option<EntityFacade>> getOptions() {
             return options;
         }
 
@@ -464,7 +492,7 @@ public class FilterOptions implements Serializable {
         public boolean equals(Object o) {
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
-            LanguageCoordinates that = (LanguageCoordinates) o;
+            LanguageFilterCoordinates that = (LanguageFilterCoordinates) o;
             if (ordinal != that.ordinal) {
                 return false;
             }
@@ -502,8 +530,8 @@ public class FilterOptions implements Serializable {
                     "\n}";
         }
 
-        public LanguageCoordinates copy() {
-            LanguageCoordinates languageCoordinates = new LanguageCoordinates(ordinal);
+        public LanguageFilterCoordinates copy() {
+            LanguageFilterCoordinates languageCoordinates = new LanguageFilterCoordinates(ordinal);
             languageCoordinates.language = language.copy();
             languageCoordinates.dialect = dialect.copy();
             languageCoordinates.pattern = pattern.copy();
@@ -518,40 +546,49 @@ public class FilterOptions implements Serializable {
 
         @Override
         public int compareTo(Object o) {
-            if (o instanceof LanguageCoordinates lang) {
+            if (o instanceof LanguageFilterCoordinates lang) {
                 return this.ordinal - lang.ordinal;
             }
             return 1;
         }
     }
 
-    private final MainCoordinates mainCoordinates;
-    private final List<LanguageCoordinates> languageCoordinatesList;
+    private MainFilterCoordinates mainCoordinates;
+    private List<LanguageFilterCoordinates> languageCoordinatesList;
+
+    private final ObservableView observableViewForFilter;
 
     public FilterOptions() {
-        mainCoordinates = new MainCoordinates();
+        mainCoordinates = new MainFilterCoordinates();
 
         languageCoordinatesList = new ArrayList<>(); // at least one
-        languageCoordinatesList.add(new LanguageCoordinates(0));
+        languageCoordinatesList.add(new LanguageFilterCoordinates(0));
+
+        observableViewForFilter = new ObservableViewNoOverride(Coordinates.View.DefaultView())
+                .makeOverridableViewProperties().nodeView();
     }
 
-    public MainCoordinates getMainCoordinates() {
+    public ObservableView observableViewForFilterProperty() {
+        return observableViewForFilter;
+    }
+
+    public MainFilterCoordinates getMainCoordinates() {
         return mainCoordinates;
     }
 
-    public List<LanguageCoordinates> getLanguageCoordinatesList() {
+    public List<LanguageFilterCoordinates> getLanguageCoordinatesList() {
         return languageCoordinatesList;
     }
 
-    public LanguageCoordinates getLanguageCoordinates(int ordinal) {
+    public LanguageFilterCoordinates getLanguageCoordinates(int ordinal) {
         if (ordinal < 0 || ordinal >= languageCoordinatesList.size()) {
             Thread.dumpStack();
         }
         return getLanguageCoordinatesList().get(ordinal);
     }
 
-    public LanguageCoordinates addLanguageCoordinates() {
-        LanguageCoordinates languageCoordinates = new LanguageCoordinates(languageCoordinatesList.size());
+    public LanguageFilterCoordinates addLanguageCoordinates() {
+        LanguageFilterCoordinates languageCoordinates = new LanguageFilterCoordinates(languageCoordinatesList.size());
         languageCoordinatesList.add(languageCoordinates);
         return languageCoordinates;
     }
@@ -563,25 +600,26 @@ public class FilterOptions implements Serializable {
                 .orElseThrow();
     }
 
-    public Option getLangOptionForItem(int ordinal, OPTION_ITEM item) {
+    public Option<EntityFacade> getLangOptionForItem(int ordinal, OPTION_ITEM item) {
         return languageCoordinatesList.get(ordinal).options.stream()
                 .filter(o -> o.item() == item)
                 .findFirst()
                 .orElseThrow();
     }
 
+    @SuppressWarnings("unchecked")
     public void setOptionForItem(OPTION_ITEM item, Option option) {
         switch (item) {
-            case NAVIGATOR -> mainCoordinates.navigator = option;
-            case TYPE -> mainCoordinates.type = option;
-            case HEADER -> mainCoordinates.header = option;
-            case STATUS -> mainCoordinates.status = option;
-            case TIME -> mainCoordinates.time = option;
-            case MODULE -> mainCoordinates.module = option;
-            case PATH -> mainCoordinates.path = option;
-            case KIND_OF -> mainCoordinates.kindOf = option;
-            case MEMBERSHIP -> mainCoordinates.membership = option;
-            case SORT_BY -> mainCoordinates.sortBy = option;
+            case NAVIGATOR -> mainCoordinates.navigator = (Option<PatternFacade>) option;
+            case TYPE -> mainCoordinates.type = (Option<String>) option;
+            case HEADER -> mainCoordinates.header = (Option<String>) option;
+            case STATUS -> mainCoordinates.status = (Option<State>) option;
+            case TIME -> mainCoordinates.time = (Option<String>) option;
+            case MODULE -> mainCoordinates.module = (Option<ConceptFacade>) option;
+            case PATH -> mainCoordinates.path = (Option<ConceptFacade>) option;
+            case KIND_OF -> mainCoordinates.kindOf = (Option<String>) option;
+            case MEMBERSHIP -> mainCoordinates.membership = (Option<String>) option;
+            case SORT_BY -> mainCoordinates.sortBy = (Option<String>) option;
         }
         mainCoordinates.options.clear();
         mainCoordinates.options.addAll(List.of(mainCoordinates.navigator, mainCoordinates.type,
@@ -591,8 +629,8 @@ public class FilterOptions implements Serializable {
                 mainCoordinates.membership, mainCoordinates.sortBy));
     }
 
-    public void setLangCoordinates(int ordinal, LanguageCoordinates value) {
-        LanguageCoordinates languageCoordinates = languageCoordinatesList.get(ordinal);
+    public void setLangCoordinates(int ordinal, LanguageFilterCoordinates value) {
+        LanguageFilterCoordinates languageCoordinates = languageCoordinatesList.get(ordinal);
         languageCoordinates.language = value.language;
         languageCoordinates.dialect = value.dialect;
         languageCoordinates.pattern = value.pattern;
@@ -600,6 +638,15 @@ public class FilterOptions implements Serializable {
         languageCoordinates.options.clear();
         languageCoordinates.options.addAll(List.of(languageCoordinates.language, languageCoordinates.dialect,
                         languageCoordinates.pattern, languageCoordinates.descriptionType));
+    }
+
+    public FilterOptions copy() {
+        FilterOptions copy = new FilterOptions();
+        copy.mainCoordinates = mainCoordinates.copy();
+        copy.languageCoordinatesList = new ArrayList<>(languageCoordinatesList.stream()
+                .map(LanguageFilterCoordinates::copy)
+                .toList());
+        return copy;
     }
 
     @Override
